--- a/auto-bump/action.yaml
+++ b/auto-bump/action.yaml
@@ -14,6 +14,10 @@ inputs:
     description: 'Path to package.json directory'
     required: false
     default: './'
+  commit:
+    description: 'Whether to commit and push the bumped version'
+    required: false
+    default: 'true'
   node-version:
     description: 'Node.js version to use'
     required: false
@@ -80,7 +84,7 @@ runs:
 
     - name: Commit and push version bump
       shell: bash
-      if: steps.skip-check.outputs.skip == 'false'
+      if: steps.skip-check.outputs.skip == 'false' && inputs.commit == 'true'
       working-directory: ${{ inputs.package_path }}
       run: |
         git config user.email "deploy-bot@riverigaming.com"
