skip checkout on condition

--- a/auto-bump/action.yaml
+++ b/auto-bump/action.yaml
@@ -18,6 +18,10 @@ inputs:
     description: 'Whether to commit and push the bumped version'
     required: false
     default: 'true'
+  do-checkout:
+    description: 'Whether to checkout the target branch'
+    required: false
+    default: 'true'
   node-version:
     description: 'Node.js version to use'
     required: false
@@ -35,6 +39,7 @@ runs:
   using: 'composite'
   steps:
     - name: Checkout target branch
+      if: inputs.do-checkout == 'true'
       uses: actions/checkout@v4
       with:
         fetch-depth: 2
