--- a/commit-type-check/action.yaml
+++ b/commit-type-check/action.yaml
@@ -5,13 +5,13 @@ inputs:
   commit-types:
     description: 'List of allowed commit types'
     required: true
-    default: |
-      feat
-      fix
-      release
   github-token:
     description: 'GitHub token (required for checkout)'
     required: true
+  skip-checkout:
+    description: 'Whether to checkout the target branch'
+    required: false
+    default: 'false'
 
 outputs:
   merge-allowed:
@@ -22,6 +22,7 @@ runs:
   using: 'composite'
   steps:
     - name: Checkout repository
+      if: inputs.skip-checkout == 'false'
       uses: actions/checkout@v4
       with:
         fetch-depth: 2
