--- a/merge/action.yml
+++ b/merge/action.yml
@@ -1,4 +1,5 @@
 name: Merge Branch With Conflict Resolution
+
 description: Merges a source branch into a target branch and auto-resolves version file conflicts.
 
 inputs:
@@ -8,26 +9,23 @@ inputs:
   target-branch:
     description: 'Branch to merge into'
     required: true
-  github-token:
-    description: 'GitHub token with write permissions'
-    required: true
   version-files:
-    description: 'Comma-separated list of version files (e.g., package.json)'
+    description: 'List of version files'
     required: false
     default: |
       package.json
   include-commit:
-    description: 'Whether to commit and push the bumped version'
+    description: 'Whether to commit and push the merged branch'
     required: false
     default: 'true'
   skip-checkout:
     description: 'Whether to checkout the target branch'
     required: false
     default: 'false'
-  node-version:
-    description: 'Node.js version to use'
-    required: false
-    default: '22'
+  github-token:
+    description: 'GitHub token with write permissions'
+    required: true
+
 
 outputs:
   manual-merge:
@@ -41,14 +39,9 @@ runs:
       if: inputs.skip-checkout == 'false'
       uses: actions/checkout@v4
       with:
-        fetch-depth: 2
+        fetch-depth: 0
         token: ${{ inputs.github-token }}
         ref: ${{ inputs.target-branch }}
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ inputs.node-version }}
 
     - name: Merge source into target with auto-resolve
       id: merge
@@ -60,22 +53,26 @@ runs:
 
         SOURCE_BRANCH="${{ inputs.source-branch }}"
         TARGET_BRANCH="${{ inputs.target-branch }}"
-        VERSION_FILES="${{ inputs.version-files }}"
-        IFS=',' read -ra VERSION_FILE_LIST <<< "$VERSION_FILES"
-
-        echo "::notice::Merging $SOURCE_BRANCH → $TARGET_BRANCH"
-        git checkout "$TARGET_BRANCH"
-
+        
+        # git checkout "$TARGET_BRANCH"
         MANUAL_MERGE=false
+        AUTO_RESOLVED=false
+
+        echo "::notice::Merging branch: $SOURCE_BRANCH into: $TARGET_BRANCH"
 
         if git merge --no-commit --no-ff --no-edit "$SOURCE_BRANCH"; then
-          echo "::notice::Clean merge succeeded"
+          if [[ -z "$(git status --porcelain)" ]]; then
+            echo "::notice::Nothing to commit for branch: $TARGET_BRANCH"
+          fi
         else
           CONFLICTS=$(git diff --name-only --diff-filter=U)
-          echo "::warning::Merge conflicts detected: $CONFLICTS"
+          echo "::warning::Conflicts: $CONFLICTS"
 
           for file in $CONFLICTS; do
             IS_VERSION_FILE=false
+            VERSION_FILES="${{ inputs.version-files }}"
+            IFS=',' read -ra VERSION_FILE_LIST <<< "$VERSION_FILES"
+
             for vfile in "${VERSION_FILE_LIST[@]}"; do
               if [[ "$file" == "$vfile" ]]; then
                 IS_VERSION_FILE=true
@@ -84,44 +81,33 @@ runs:
             done
 
             if [[ "$IS_VERSION_FILE" == true ]]; then
-              echo "::notice::Attempting to auto-resolve version conflict in $file"
-
-              CONFLICT_CONTENT=$(awk '/^<<<<<<< HEAD/,/^>>>>>>>/' "$file" || true)
-              NON_VERSION_LINES=$(echo "$CONFLICT_CONTENT" | \
-                grep -vE '<<<<<<<|=======|>>>>>>>' | \
-                grep -vE '^\s*"version"\s*:' || true)
-
-              if [[ -n "$NON_VERSION_LINES" ]]; then
-                echo "::error::Unresolvable conflict in $file (non-version content). Manual merge required."
-                git merge --abort || true
-                MANUAL_MERGE=true
-                break
-              fi
-
+              echo "::notice::Auto-resolving $file version conflicts."
               git checkout --ours "$file"
               git add "$file"
-              echo "::notice::Auto-resolved $file"
+              AUTO_RESOLVED=true
             else
-              echo "::error::Conflict in $file is not auto-resolvable. Manual merge required."
-              git merge --abort || true
+              echo "::error::Conflict in $file cannot be auto-resolved. Aborting merge."
+              git merge --abort
               MANUAL_MERGE=true
               break
             fi
           done
-
-          if [[ "$MANUAL_MERGE" == false ]]; then
-            git commit -m "chore(*): auto-resolve version conflict"
-          fi
         fi
 
-        # Output the result
-        echo "manual-merge=$MANUAL_MERGE" >> $GITHUB_OUTPUT
+        echo "manual-merge=$MANUAL_MERGE" >> "$GITHUB_OUTPUT"
+        echo "auto-resolved=$AUTO_RESOLVED" >> "$GITHUB_OUTPUT"
 
-    - name: Push merged branch
-      if: inputs.include-commit == 'true' && steps.merge.outputs.manual-merge != 'true'
+    - name: Commit and push merged changes
+      if: inputs.include-commit == 'true' && steps.merge.outputs.manual-merge == 'false'
       shell: bash
       run: |
-        echo "::notice::Pushing ${{ inputs.target-branch }}"
-        git push origin "${{ inputs.target-branch }}"
-
-
+        AUTO_RESOLVED = "${{ steps.merge.outputs.auto-resolved }}"
+        if [[ -n "$(git status --porcelain)" ]]; then
+          echo "::notice::Commit and pushing ${{ inputs.target-branch }}"
+          if [[ "$AUTO_RESOLVED" == true ]]; then
+            git commit -m "chore(*): auto-resolve version conflicts"
+          else
+            git commit --no-edit
+          fi
+          git push origin "${{ inputs.target-branch }}"
+        fi
