--- a/merge/action.yml
+++ b/merge/action.yml
@@ -42,7 +42,7 @@ runs:
       with:
         fetch-depth: 0
         token: ${{ inputs.github-token }}
-        ref: ${{ inputs.source-branch }}
+        ref: ${{ inputs.target-branch }}
 
     - name: Merge source into target with auto-resolve
       id: merge
@@ -57,7 +57,7 @@ runs:
         MANUAL_MERGE=false
         AUTO_RESOLVED=false
 
-        git checkout "$TARGET_BRANCH"
+        # git checkout "$TARGET_BRANCH"
 
         echo "::notice::Merging branch: $SOURCE_BRANCH into: $TARGET_BRANCH"
 
