--- a/merge-branch/action.yml
+++ b/merge-branch/action.yml
@@ -64,20 +64,20 @@ runs:
           CONFLICTS=$(git diff --name-only --diff-filter=U)
           echo "::warning::Conflicts: $CONFLICTS"
 
-          readarray -t VERSION_FILES <<< "${{ inputs.version-files }}"
-          VERSION_FILES=($(printf "%s\n" "${VERSION_FILES[@]}" | sed '/^\s*$/d'))
+          readarray -t FILES <<< "${{ inputs.conflict-auto-keep-files }}"
+          FILES=($(printf "%s\n" "${FILES[@]}" | sed '/^\s*$/d'))
 
           for file in $CONFLICTS; do
-            IS_VERSION_FILE=false
+            IS_FILE=false
 
-            for vfile in "${VERSION_FILES[@]}"; do
-              if [[ "$file" == "$vfile" ]]; then
-                IS_VERSION_FILE=true
+            for file in "${FILES[@]}"; do
+              if [[ "$file" == "$file" ]]; then
+                IS_FILE=true
                 break
               fi
             done
 
-            if [[ "$IS_VERSION_FILE" == true ]]; then
+            if [[ "$IS_FILE" == true ]]; then
               echo "::notice::⚠️ Auto-resolving $file version conflicts."
               git checkout --ours "$file"
               git add "$file"
