--- a/commit-type-check/action.yaml
+++ b/commit-type-check/action.yaml
@@ -35,7 +35,11 @@ runs:
 
         readarray -t COMMIT_TYPES <<< "${{ inputs.commit-types }}"
         COMMIT_TYPES=($(printf "%s\n" "${COMMIT_TYPES[@]}" | sed '/^\s*$/d'))
-
+        COMMIT_TYPESS=($(printf "%s" "${COMMIT_TYPES[@]}" | sed '/^\s*$/d'))
+        COMMIT_TYPESN=($(printf "\n" "${COMMIT_TYPES[@]}" | sed '/^\s*$/d'))
+        echo "🔍 Checking if commit types - \"$COMMIT_TYPESS\""
+        echo "🔍 Checking if commit types - \"$COMMIT_TYPESN\""
+        
         COMMIT_MESSAGE="$(git log -1 --pretty=%B)"
         echo "📝 Commit message: \"$COMMIT_MESSAGE\""
 
