--- a/commit-type-check/action.yaml
+++ b/commit-type-check/action.yaml
@@ -38,14 +38,20 @@ runs:
         COMMIT_TYPESS=($(printf "%s" "${COMMIT_TYPES[@]}" | sed '/^\s*$/d'))
         COMMIT_TYPESN=($(printf "\n" "${COMMIT_TYPES[@]}" | sed '/^\s*$/d'))
         echo "🔍 Checking if commit types SN - \"$COMMIT_TYPES\""
+        echo "🔍 Checking if commit types SN wit arr - \"$COMMIT_TYPES[@]\""
         echo "🔍 Checking if commit types S - \"$COMMIT_TYPESS\""
         echo "🔍 Checking if commit types N - \"$COMMIT_TYPESN\""
         
         COMMIT_MESSAGE="$(git log -1 --pretty=%B)"
         echo "📝 Commit message: \"$COMMIT_MESSAGE\""
 
-        # Match using regex
+        COMMIT_TYPES_CLEAN=()
         for type in "${COMMIT_TYPES[@]}"; do
+          [[ -n "$type" ]] && COMMIT_TYPES_CLEAN+=("$type")
+        done
+
+        # Match using regex
+        for type in "${COMMIT_TYPES_CLEAN[@]}"; do
           echo "🔍 Checking if commit message matches: \"$type\" - \"$COMMIT_MESSAGE\""
           if [[ "$COMMIT_MESSAGE" == "$type" ]]; then
             echo "✅ Exact match found: $type"
