--- a/commit-type-check/action.yaml
+++ b/commit-type-check/action.yaml
@@ -49,6 +49,8 @@ runs:
         for type in "${COMMIT_TYPES[@]}"; do
           [[ -n "$type" ]] && COMMIT_TYPES_CLEAN+=("$type")
         done
+        
+        echo "🔍 Checking if commit types N - \"$COMMIT_TYPES_CLEAN\""
 
         # Match using regex
         for type in "${COMMIT_TYPES_CLEAN[@]}"; do
