--- a/commit-type-check/action.yaml
+++ b/commit-type-check/action.yaml
@@ -34,7 +34,8 @@ runs:
         COMMIT_TYPE_ALLOWED=false
 
         readarray -t COMMIT_TYPES <<< "${{ inputs.commit-types }}"
-        COMMIT_TYPES=($(printf "${COMMIT_TYPES[@]}" | sed '/^\s*$/d'))
+
+        # COMMIT_TYPES=($(printf "%s\n" "${COMMIT_TYPES[@]}" | sed '/^\s*$/d'))
         
         for type in "${COMMIT_TYPES[@]}"; do
           echo "🔹 ==> Commit type: [$type]"
@@ -56,7 +57,7 @@ runs:
         # Match using regex
         for type in "${COMMIT_TYPES[@]}"; do
           echo "🔍 Checking if commit message matches: \"$type\" - \"$COMMIT_MESSAGE\""
-          if [[ "$COMMIT_MESSAGE" == "$type"* ]]; then
+          if [[ "$COMMIT_MESSAGE" == "$type" ]]; then
             echo "✅ Exact match found: $type"
             COMMIT_TYPE_ALLOWED=true
             break
