test dingle line input

--- a/auto-bump/action.yaml
+++ b/auto-bump/action.yaml
@@ -50,9 +50,7 @@ runs:
       id: skip-check
       uses: River-iGaming/actions/commit-type-check@feature/commit-type-check-in-auto-bump-for-skip
       with:
-        commit-types: |
-          chore(package): auto bump version
-          chore(test)
+        commit-types: 'chore(package): auto bump version'
         skip: 'true'
         github-token: ${{ inputs.github-token }}
 
