--- a/auto-bump/action.yaml
+++ b/auto-bump/action.yaml
@@ -52,6 +52,7 @@ runs:
       with:
         commit-types: 'chore(package): auto bump version'
         skip: 'true'
+        skip-checkout: ${{ inputs.skip-checkout }}
         github-token: ${{ inputs.github-token }}
 
     - name: Set up Node.js
