debug logs removed

--- a/commit-type-check/action.yaml
+++ b/commit-type-check/action.yaml
@@ -5,8 +5,8 @@ inputs:
   commit-types:
     description: 'List of allowed commit types'
     required: true
-  skip:
-    description: 'Skip if last commit types matched, not allow'
+  deny-on-match:
+    description: 'Deny if commit matches any of the provided types'
     required: false
     default: 'false'
   skip-checkout:
@@ -14,7 +14,7 @@ inputs:
     required: false
     default: 'false'  
   github-token:
-    description: 'GitHub token (required for checkout)'
+    description: 'GitHub token with write permissions'
     required: true
 
 outputs:
@@ -37,54 +37,35 @@ runs:
       shell: bash
       run: |
         COMMIT_TYPE_ALLOWED=false
-
+        
         readarray -t COMMIT_TYPES <<< "${{ inputs.commit-types }}"
-
-        # COMMIT_TYPES=($(printf "%s\n" "${COMMIT_TYPES[@]}" | sed '/^\s*$/d'))
-        
-        for type in "${COMMIT_TYPES[@]}"; do
-          echo "🔹 ==> Commit type: [$type]"
-        done
-        
-        echo "🔍 Checking if commit types SN - \"$COMMIT_TYPES\""
-        echo "🔍 Checking if commit types SN wit arr - \"$COMMIT_TYPES[@]\""
-
         COMMIT_MESSAGE="$(git log -1 --pretty=%B)"
-        echo "📝 Commit message: \"$COMMIT_MESSAGE\""
-
-        echo "🔍 Checking if commit types N - \"$COMMIT_TYPES\""
-
-        # Match using regex
+        
         for type in "${COMMIT_TYPES[@]}"; do
-          echo "🔍 Checking if commit message matches: \"$type\" - \"$COMMIT_MESSAGE\""
           [[ -z "$type" ]] && continue
 
           if [[ "$COMMIT_MESSAGE" == "$type"* ]]; then
             echo "✅ Exact match found: $type"
             COMMIT_TYPE_ALLOWED=true
             break
-          else
-            echo "❌ No exact match for: $type"
           fi
         done
 
-        ALLOWED_TYPES=$(IFS=", "; echo "${COMMIT_TYPES[*]}")
-        if [[ "${{ inputs.skip }}" == "true" ]]; then
+        if [[ "${{ inputs.deny-on-match }}" == "true" ]]; then
           if [[ "$COMMIT_TYPE_ALLOWED" == "true" ]]; then
             COMMIT_TYPE_ALLOWED=false
-            # ALLOWED_TYPES=$(IFS=", "; echo "${COMMIT_TYPES[*]}")
+            ALLOWED_TYPES=$(IFS=", "; echo "${COMMIT_TYPES[*]}")
             echo "::error::❌ Commit types matched \"$COMMIT_MESSAGE\" | Not allowed types: [$ALLOWED_TYPES]"
           else
             COMMIT_TYPE_ALLOWED=true
-            # ALLOWED_TYPES=$(IFS=", "; echo "${COMMIT_TYPES[*]}")
-            echo "::notice::✅ Commit types not matched \"$COMMIT_MESSAGE\" | Not allowed types: [$ALLOWED_TYPES]"
+            echo "::notice::✅ Commit types not matched"
           fi
         else 
           if [ "$COMMIT_TYPE_ALLOWED" = false ]; then
-            # ALLOWED_TYPES=$(IFS=", "; echo "${COMMIT_TYPES[*]}")
+            ALLOWED_TYPES=$(IFS=", "; echo "${COMMIT_TYPES[*]}")
             echo "::error::❌ No commit types matched \"$COMMIT_MESSAGE\" | Allowed types: [$ALLOWED_TYPES]"
           else 
-            echo "::notice::✅ Commit type matched \"$COMMIT_MESSAGE\" | Allowed types: [$ALLOWED_TYPES]"
+            echo "::notice::✅ Commit type matched"
           fi
         fi
 
