--- a/auto-bump/action.yaml
+++ b/auto-bump/action.yaml
@@ -48,7 +48,7 @@ runs:
 
     - name: Skip if last commit was an auto-bump
       id: skip-check
-      uses: River-iGaming/actions/commit-type-check@main
+      uses: River-iGaming/actions/commit-type-check@v4
       with:
         commit-types: 'chore(package): auto bump version'
         error-on-match: 'true'
